--- a/blog-post.html
+++ b/blog-post.html
@@ -129,7 +129,313 @@
             </div>
         </div>
 
-        <div class="postwelcomescreen">
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <div class="postwrapp">
+                        <div class="postwelcomescreen">
+                            <div class="postwelcomescreen__imgwrap">
+                                <img src="img/blog/postimg.jpg" alt="img">
+                            </div>
+
+                            <div class="postwelcomescreen__info">
+                                <div class="author">
+                                    <div class="author__img">
+                                        <img src="img/blog/user.png" alt="user">
+                                    </div>
+                                    <div class="author__info">
+                                        <p class="name">Meri Cuper</p>
+                                        <p class="date">22 Jan 2023</p>
+                                    </div>
+                                </div>
+                                <div class="postwelcomescreen__inforight">
+                                    <div class="time">
+                                        <p>
+                                            <img src="img/general/clock-white.svg" alt="time">
+                                            10 min
+                                        </p>
+                                    </div>
+                                    <div class="category">
+                                        <p>
+                                            Category:
+                                            <span>Gluten</span>
+                                        </p>
+                                    </div>
+                                    <div class="share">
+                                        <span>share:</span>
+                                        <ul>
+                                            <li><a href="#" target="_blank"><img src="img/general/fb-white.svg"
+                                                        alt="facebook"></a>
+                                            </li>
+                                            <li><a href="#" target="_blank"><img src="img/general/inst-white.svg"
+                                                        alt="instagram"></a></li>
+                                            <li><a href="#" target="_blank"><img src="img/general/tg-white.svg"
+                                                        alt="telegram"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <article class="postcontent">
+                            <h1>How to choose gluten-free baking?</h1>
+                            <p>
+                                Psum dolor sit amet, consectetur adipiscing elit. Ut quis sem ultricies enim placerat
+                                ultrices. Sed
+                                a ultrices sapien. Nunc eget ultrices risus. Vivamus tincidunt, enim ac lobortis
+                                tincidunt,
+                                velit ex
+                                scelerisque arcu, sed pretium lorem nisl eget eros. Praesent tortor diam, bibendum eu
+                                tristique
+                                tincidunt, ultrices nec odio. Duis ligula erat, fermentum eu gravida ut, varius eu
+                                nulla.
+                                Curabitur
+                                nec urna quis lacus cursus commodo cursus vel sem. Etiam sit amet metus ut lorem
+                                suscipit
+                                mattis.
+                            </p>
+                            <p>
+                                Cras dapibus euismod tincidunt. Vivamus tincidunt felis eu augue elementum, sit amet
+                                finibus
+                                velit
+                                sollicitudin. Pellentesque tortor eros, fringilla accumsan venenatis at, pulvinar
+                                fringilla
+                                ligula.
+                                Quisque fringilla tortor eu fermentum tincidunt. Curabitur in accumsan nisl, et sagittis
+                                nisi. Nam
+                                tempus, turpis viverra ultricies consequat, dolor lorem dapibus risus, quis sodales quam
+                                risus non
+                                erat.
+                            </p>
+                            <blockquote>
+                                “ Donec vehicula luctus magna. Nulla ullamcorper sem a mauris ultricies, ut interdum
+                                quam
+                                ullamcorper. Vivamus ac nibh faucibus arcu gravida blandit. Quisque semper augue purus,
+                                non
+                                vulputate tellus pharetra id. In ante metus, iaculis id consequat eget, posuere quis
+                                mi.“
+                            </blockquote>
+                            <h3>
+                                Pellentesque posuere porta lorem, id pulvinar nulla vulputate ornare
+                            </h3>
+                            <p>
+                                Dolor sit amet, consectetur adipiscing elit. Ut quis sem ultricies enim placerat
+                                ultrices.
+                                Sed a ultrices sapien. Nunc eget ultrices risus. Vivamus tincidunt, enim ac lobortis
+                                tincidunt, velit ex scelerisque arcu, sed pretium lorem nisl eget eros. Praesent tortor
+                                diam, bibendum eu tristique tincidunt, ultrices nec odio. Duis ligula erat, fermentum eu
+                                gravida ut, varius eu nulla. Curabitur nec urna quis lacus cursus commodo cursus vel
+                                sem.
+                                Etiam sit amet metus ut lorem suscipit mattis:
+                            </p>
+                            <ul>
+                                <li>
+                                    Navigating Family Dynamics
+                                </li>
+                                <li>
+                                    Aenean posuere sed nibh ac pretium
+                                </li>
+                                <li>
+                                    Nam non lorem suscipit, rhoncus risus vel, suscipit magna.
+                                </li>
+                                <li>
+                                    Cras aliquet metus nec pharetra porttitor.
+                                </li>
+                            </ul>
+                            <p>
+                                Nam vitae aliquam eros, in aliquet ipsum. Nunc ullamcorper purus vel nibh efficitur, in
+                                gravida lectus pharetra. Morbi tempor, orci at sollicitudin cursus, arcu tortor sodales
+                                turpis, vel pharetra eros sem a orci. Nunc faucibus vitae massa nec egestas. In
+                                venenatis
+                                odio a tempus pellentesque. Sed gravida aliquam velit, eu egestas mauris ultricies quis.
+                            </p>
+                            <img src="img/blog/postpic1.jpg" alt="img">
+                            <h3>Sed in mi sit amet risus condimentum iaculis</h3>
+                            <p>
+                                Nunc ullamcorper purus vel nibh efficitur, in gravida lectus pharetra. Morbi tempor,
+                                orci at
+                                sollicitudin cursus, arcu tortor sodales turpis, vel pharetra eros sem a orci. Nunc
+                                faucibus
+                                vitae massa nec egestas. In venenatis odio a tempus pellentesque. Sed gravida aliquam
+                                velit,
+                                eu egestas mauris ultricies quis. Nulla facilisi. Vestibulum faucibus venenatis lacus at
+                                iaculis. Maecenas accumsan, purus vitae mattis condimentum, velit ante condimentum dui,
+                                a
+                                efficitur velit ex sit amet lacus.
+                            </p>
+                            <p>
+                                Donec vehicula luctus magna. Nulla ullamcorper sem a mauris ultricies, ut interdum quam
+                                ullamcorper. Vivamus ac nibh faucibus arcu gravida blandit. Quisque semper augue purus,
+                                non
+                                vulputate tellus pharetra id. In ante metus, iaculis id consequat eget, posuere quis mi.
+                                Sed
+                                ac dignissim tortor. Maecenas venenatis nisi ut tristique interdum. Aliquam pellentesque
+                                lacus felis, et condimentum augue faucibus ac.
+                            </p>
+                            <p>
+                                Nunc faucibus vitae massa nec egestas. In venenatis odio a tempus pellentesque. Sed
+                                gravida
+                                aliquam velit, eu egestas mauris ultricies quis. Nulla facilisi. Vestibulum faucibus
+                                venenatis lacus at iaculis. Maecenas accumsan, purus vitae mattis condimentum, velit
+                                ante
+                                condimentum dui, a efficitur velit ex sit amet lacus.
+                            </p>
+
+                            <div class="video">
+                                <iframe src="https://www.youtube.com/embed/IUN664s7N-c" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <p>
+                                Donec vehicula luctus magna. Nulla ullamcorper sem a mauris ultricies, ut interdum quam
+                                ullamcorper. Vivamus ac nibh faucibus arcu gravida blandit. Quisque semper augue purus,
+                                non
+                                vulputate tellus pharetra id. In ante metus, iaculis id consequat eget, posuere quis mi.
+                                Sed
+                                ac dignissim tortor. Maecenas venenatis nisi ut tristique interdum. Aliquam pellentesque
+                                lacus felis, et condimentum augue faucibus ac.
+                            </p>
+                            <p>
+                                Nunc faucibus vitae massa nec egestas. In venenatis odio a tempus pellentesque. Sed
+                                gravida
+                                aliquam velit, eu egestas mauris ultricies quis. Nulla facilisi. Vestibulum faucibus
+                                venenatis lacus at iaculis. Maecenas accumsan, purus vitae mattis condimentum, velit
+                                ante
+                                condimentum dui, a efficitur velit ex sit amet lacus.
+                            </p>
+                        </article>
+                        <div class="discusssection">
+                            <h3>Discussions</h3>
+                            <div class="prodtestimonials">
+                                <div class="prodtestimonial">
+                                    <div class="prodtestimonial__header">
+                                        <div class="prodtestimonial__userbox">
+                                            <div class="imgwrap">
+                                                <img src="img/product/user.png" alt="img">
+                                            </div>
+                                            <div class="name">
+                                                <p>Food customer</p>
+                                            </div>
+                                        </div>
+                                        <span class="date">August 2022</span>
+                                    </div>
+                                    <div class="prodtestimonial__body">
+                                        <p>
+                                            For to everyone who has, to him will be given and more will be added, but
+                                            from him who does not have, even what he has will be taken away from him.
+                                            And throw the useless slave into outer darkness, there will be weeping and
+                                            gnashing of teeth! When the Son of Man comes in His glory, and all the
+                                            Angels are with Him, then He will sit on the throne of His glory. And before
+                                            Him all nations will gather, and He will separate them one from another, as
+                                            a shepherd separates sheep from goats.
+                                        </p>
+                                    </div>
+                                    <div class="prodtestimonial__footer">
+                                        <p>
+                                            Was this helpful?
+                                        </p>
+                                        <a href="#">
+                                            <img src="img/product/like.svg" alt="like">
+                                            1
+                                        </a>
+                                        <a href="#">
+                                            <img src="img/product/dislike.svg" alt="like">
+                                            0
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="prodtestimonial">
+                                    <div class="prodtestimonial__header">
+                                        <div class="prodtestimonial__userbox">
+                                            <div class="imgwrap">
+                                                <img src="img/product/user.png" alt="img">
+                                            </div>
+                                            <div class="name">
+                                                <p>Food customer</p>
+                                            </div>
+                                        </div>
+                                        <span class="date">August 2022</span>
+                                    </div>
+                                    <div class="prodtestimonial__body">
+                                        <p>
+                                            As Saturday passed, at dawn on the first day of the week, Mary Magdalene and
+                                            another Mary came to see the tomb.And there was a great earthquake, because
+                                            the Angel of the Lord came down from heaven and, approaching, rolled away
+                                            the stone from the tomb and sat on it.His figure was like lightning, and his
+                                            clothes were white as snow. And the guard trembled from fear before him, and
+                                            became as if dead. And the angel spoke and said to the women: Do not be
+                                            afraid, for I know that it is Jesus who was crucified that you are looking
+                                            for.He is not here, because he has risen, as he said. Come, look at the
+                                            place where He was.
+                                        </p>
+                                    </div>
+                                    <div class="prodtestimonial__footer">
+                                        <p>
+                                            Was this helpful?
+                                        </p>
+                                        <a href="#">
+                                            <img src="img/product/like.svg" alt="like">
+                                            1
+                                        </a>
+                                        <a href="#">
+                                            <img src="img/product/dislike.svg" alt="like">
+                                            0
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <h3>Leave a comment</h3>
+                            <form action="#">
+                                <div class="row">
+                                    <div class="col-xl-4">
+                                        <div class="inputfield">
+                                            <input type="text" placeholder="Full Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-4">
+                                        <div class="inputfield">
+                                            <input type="email" placeholder="Your email">
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-4">
+                                        <div class="inputfield">
+                                            <input type="number" placeholder="Your mobile">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="inputfield">
+                                            <textarea placeholder="You comment..."></textarea>
+                                        </div>
+                                    </div>
+
+                                    <input class="greenbtn" type="submit" value="Submit">
+                                </div>
+                            </form>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <div class="postwelcomescreen">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
@@ -178,9 +484,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <article class="postcontent">
+        <!-- <article class="postcontent">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-8">
@@ -291,7 +597,7 @@
                     </div>
                 </div>
             </div>
-        </article>
+        </article> -->
 
 
 
