--- a/sitemap.html
+++ b/sitemap.html
@@ -35,6 +35,7 @@
             <li><a target="_blank" href="recipes-favorite.html">Recipes Faforite</a></li>
             <li><a target="_blank" href="blog.html">Community blog</a></li>
             <li><a target="_blank" href="blog-post.html">Blog post</a></li>
+            <li><a target="_blank" href="create-blog.html">Create blog</a></li>
         </ul>
     </div>
 
