--- a/sitemap.html
+++ b/sitemap.html
@@ -36,6 +36,10 @@
             <li><a target="_blank" href="blog.html">Community blog</a></li>
             <li><a target="_blank" href="blog-post.html">Blog post</a></li>
             <li><a target="_blank" href="create-blog.html">Create blog</a></li>
+            <li><a target="_blank" href="edit-blog.html">Edit blog</a></li>
+        </ul>
+        <ul>
+            <li><a href="my-account.html" target="_blank">My Account</a></li>
         </ul>
     </div>
 
@@ -46,12 +50,17 @@
             padding: 30px;
             background: #158466;
             min-height: 100vh;
+            display: flex;
+            flex-wrap: wrap;
         }
 
         ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
+            width: 100%;
+            max-width:40%;
+            flex: 0 0 40%;
         }
 
         li {
